@@ -2,6 +2,8 @@
 * Fix bug where data point tags were not exported when using the search-and-export feature of the data point tables on the Data Source Edit page
 * Attempt to open unknown comm port identifiers as JSSC serial ports before reporting port not found failure
 * Check owned ports during port list refresh
+* Fix deadlock issue when changing password due to websocket code upgrading a read lock to a write lock
+* Move websocket notifications, raising events etc out of transaction in UserDao
 
 *Version 3.3.2*
 * Maximum file upload size configurable via env property web.fileUpload.maxSize
